--- a/src/main/resources/templates/chat/chatStart.html
+++ b/src/main/resources/templates/chat/chatStart.html
@@ -90,11 +90,12 @@
     </div>
 </div>
 
+<input type="hidden" id="currentUserId" th:value="${user}">
+<input type="hidden" id="chatId" th:value="${chat}">
+
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 
-<!--<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>-->
-<!--<script src="/js/lib/stomp.umd.min.js"></script>-->
 <script src="/index.js"></script>
 
 </body>
